@@ -17,6 +17,10 @@
   + New localizable tool tips for every parameter
   - Fixing quantizing CMYK images when no new pixel format is selected 
 
++ API changes:
+  + KGySoft.Drawing.ImagingTools.Model namespace:
+    + New CustomColorInfo class: New CustomColorComponents property
+
 
 ~~~~~~~~~
 + v3.1.0:
